# game-of-life-bevy

./: .gitignore  Cargo.toml  README.md  build_web.sh  flake.nix  index.html  wasm.js
.github/workflows/: deploy-to-pages.yml  test.yml
assets/patterns/: p124.rle
src/: main.rs
