[package]
name = "game-of-life-bevy"
version = "0.1.0"
authors = ["Simon Voordouw <simonvoordouw@gmail.com>"]
edition = "2018"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
bevy_webgl2 = { version = "0.5.2", optional = true }
winit = "0.24.0"
getrandom = {version="0.1", features=["wasm-bindgen"]}
rand = "0.8.3"
