[package]
name = "game-of-life-bevy"
version = "0.1.0"
authors = ["Simon Voordouw <simonvoordouw@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
bmp = "0.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.5.0", default-features = false, features = ["bevy_winit", "render", "png"] }
bevy_webgl2 = { version = "0.5.2" }
